# menuet

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  justfile  pyproject.toml  zensical-schema.json  zensical.toml
.github/: README.md
.gitlab/merge_request_templates/: Default.md
.woodpecker/: docs.yaml  release.yaml
changelog.d/: +8612d0c7.fix.md  +9cbd9c87.doc.md  +d39a3dfb.doc.md  2.doc.md  3.feat.md  5.feat.md  6.feat.md  8.feat.md  9.break.md  template.md.jinja
docs/: api.md  configuration.md  examples.md  menuet.json  recipes.md  sink.md
docs/assets/: demo_blender.py  demo_houdini.py  demo_max.py  demo_maya.py  demo_qtapp.py  demo_unreal.py
docs/stylesheets/: extra.css
scripts/: github-readme.py
src/menuet/: __init__.py  action.py  menu.py  model.py  utils.py
src/menuet/builders/: blender.py  houdini.py  max.py  maya.py  qt.py  text.py  unreal.py
src/menuet/demo/: __init__.py  menu.toml
tests/: test_builder_blender.py  test_builder_houdini.py  test_model_parse.py  test_qmenu_builder.py  test_text_builder.py
tests/data/: ep.py
